muitas alterações no codigo

--- a/paginaPrincipal.html
+++ b/paginaPrincipal.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Surfista Prateado</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <link rel="icon" href="imagens/iconePage.jpg" type="image/x-icon">
     <link rel="stylesheet" href="./estilosCss/pagina.css">
 </head>
@@ -16,22 +18,46 @@
         </div>
         <nav class="navegacao">
             <ul>
-                <li><button  class="botoes" id="idSobre" type="submit"> <img src="imagens/star-inside-circle.png" alt="icone1" class="imagens1"> </button>SOBRE</li>
-                <li><button class="botoes" id="idContatos" type="submit"> <img src="imagens/star-inside-circle.png" alt="icone1" class="imagens1"></button>CONTATOS</li>
-                <li><button class="botoes" id="idProdutos" type="submit"> <img src="imagens/star-inside-circle.png" alt="icone1" class="imagens1"></button>PRODUTOS</li>
-                <li><button class="botoes" id="idRedeSocial" type="submit"> <img src="imagens/star-inside-circle.png" alt="icone1" class="imagens1"></button>REDES SOCIAIS</li>
+                <li><button type="button" class="btn btn-outline-secondary">SOBRE</button><span class="sobre"></li>
+                <li><button type="button" class="btn btn-outline-secondary">CONTATOS</button><span class="contato"></li>
+                <li><button type="button" class="btn btn-outline-secondary">PRODUTOS</button><span class="produtos"></li>
+                <li><button type="button" class="btn btn-outline-secondary">REDES SOCIAIS</button><span class="redes"></li>
             </ul>
         </nav>
-        <div class="barraPesquisa">
-            <input type="text" id="pesquisar">
-        </div>
     </header>
-    <main>
+            <main>
+                
 
-    </main>
-    <footer>
-    </footer>
+                
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+            </main>
+        <footer> 
+            &copy; surfistaprateado@gmail.com
+        </footer>
+
+        <div class="javaScript">
+            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" 
+            integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" 
+            crossorigin="anonymous"></script>
+        </div>
 
 </body>
-
 </html>
