--- a/DOM/index.html
+++ b/DOM/index.html
@@ -1,44 +1,102 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>POEMAS || ROMANTICOS</title>
+    <link rel="stylesheet" href="/estilos.css" />
+  </head>
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> POEMAS || ROMANTICOS </title>
-    <link rel="stylesheet" href="/DOM/estilos.css">
-</head>
+  <body>
+    <div class="imagens">
+      <div class="img-titulo">
+        <img src="diario-de-amor.png" alt="" />
+        <h4>Vinicius De Moraes</h4>
+        <br />
+      </div>
+      <div class="img-titulo">
+        <img src="diario-de-amor.png" alt="" />
+        <h4>Carlos Drummond de Andrade</h4>
+        <br />
+      </div>
+      <div class="img-titulo">
+        <img src="diario-de-amor.png" alt="" />
+        <h4>Cecília Meireles</h4>
+        <br />
+      </div>
 
-<body>
-
-    <div class="poemaVn">
-        <h4>
-            VINICIUS DE MORAES
-        </h4>
-        <p>
-            Amo-te tanto, meu amor... não cante
-            O humano coração com mais verdade...
-            Amo-te como amigo e como amante
-            Numa sempre diversa realidade.
-
-            Amo-te afim, de um calmo amor prestante
-            E te amo além, presente na saudade
-            Amo-te, enfim, com grande liberdade
-            Dentro da eternidade e a cada instante.
-
-            Amo-te como um bicho, simplesmente
-            De um amor sem mistério e sem virtude
-            Com um desejo maciço e permanente.
-
-            E de te amar assim, muito e amiúde
-            É que um dia em teu corpo, de repente
-            Hei de morrer de amar mais do que pude.
-
-
-            Rio, 1951
-        </p>
+      <div class="img-titulo">
+        <img src="diario-de-amor.png" alt="" />
+        <h4>Augusto dos Anjos</h4>
+        <br />
+      </div>
+      <div class="img-titulo">
+        <img src="diario-de-amor.png" alt="" />
+        <h4>Mário Quintana</h4>
+        <br />
+      </div>
     </div>
-
+    <main class="paidetodos">
+      <div  class="poema">
+        <img src="marcador-de-livro.png" alt="" />
+        <p>
+          Amo-te tanto, meu amor... não cante O humano coração com mais
+          verdade... Amo-te como amigo e como amante Numa sempre diversa
+          realidade. Amo-te afim, de um calmo amor prestante E te amo além,
+          presente na saudade Amo-te, enfim, com grande liberdade Dentro da
+          eternidade e a cada instante. Amo-te como um bicho, simplesmente De um
+          amor sem mistério e sem virtude Com um desejo maciço e permanente. E
+          de te amar assim, muito e amiúde É que um dia em teu corpo, de repente
+          Hei de morrer de amar mais do que pude. Rio, 1951
+        </p>
+      </div>
+      <div class="poema">
+        <img src="marcador-de-livro.png" alt="" />
+        <p>
+          Eu te amo porque te amo. Não precisas ser amante, e nem sempre sabes
+          sê-lo. Eu te amo porque te amo. Amor é estado de graça e com amor não
+          se paga. Amor é dado de graça, é semeado no vento, na cachoeira, no
+          eclipse. Amor foge a dicionários e a regulamentos vários. Eu te amo
+          porque não amo bastante ou de mais a mim. Porque amor não se troca,
+          não se conjuga nem se ama. Porque amor é amor a nada, feliz e forte em
+          si mesmo.
+        </p>
+      </div>
+      <div class="poema">
+        <img src="marcador-de-livro.png" alt="" />
+        <p>
+          Pus o meu sonho num navio e o navio em cima do mar; — depois, abri o
+          mar com as mãos, para o meu sonho naufragar. Minhas mãos ainda estão
+          molhadas do azul das ondas entreabertas, e a cor que escorre dos meus
+          dedos colore as areias desertas. O vento vem vindo de longe, a noite
+          se curva de frio; debaixo da água vai morrendo meu sonho, dentro de um
+          navio... Chorarei quanto for preciso, para fazer com que o mar cresça
+          e o meu navio chegue ao fundo e o meu sonho desapareça.
+        </p>
+      </div>
+      <div class="poema">
+        <img src="marcador-de-livro.png" alt="" />
+        <p>
+          Vês! Ninguém assistiu ao formidável Enterro de tua última quimera.
+          Somente a Ingratidão — esta pantera — Foi tua companheira inseparável!
+          Acostuma-te à lama que te espera! O Homem, que nesta terra miserável
+          Mora, entre feras, sente inevitável Necessidade de também ser fera.
+          Toma um fósforo. Acende teu cigarro! O beijo, amigo, é a véspera do
+          escarro, A mão que afaga é a mesma que apedreja. Se a alguém causa
+          inda pena a tua chaga, Apedreja essa mão vil que te afaga, Escarra
+          nessa boca que te beija!
+        </p>
+      </div>
+      <div class="poema">
+        <img src="marcador-de-livro.png" alt="" />
+        <p>
+          Amar é mudar a alma de casa, é ter no outro o pensamento, é ser só de
+          alguém e ser contente, é ter no peito o sol de um sentimento. Amar é
+          ser feliz e ser amado, é andar sem pensar no tempo, é ter na vida um
+          novo alento, é ter o coração sempre acordado.
+        </p>
+      </div>
+    </main>
     <script src="/DOM/java.js"></script>
-</body>
-
+  </body>
 </html>
